Fixed simple z-index issue

--- a/assets/stylesheets/chat.scss
+++ b/assets/stylesheets/chat.scss
@@ -3,7 +3,7 @@
 	bottom: 0;
 	right: 0;
 	width: 325px;
-	z-index: 10;
+	z-index: 525;
 	display:inline-block;
 }
 
